# sciencebeam-parser

./: .dockerignore  .env  .gitignore  .pylintrc  .travis.yml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Jenkinsfile  Jenkinsfile.update-sciencebeam-gym  LICENSE  MANIFEST.in  Makefile  README.md  app-defaults.cfg  build_container.sh  config.yml  docker-bake.hcl  docker-compose.ci.yml  docker-compose.latest.yml  docker-compose.override.yml  docker-compose.yml  maintainers.txt  print_version.sh  project_tests.sh  pyproject.toml  pytest.ini  requirements.build.txt  requirements.cpu.txt  requirements.cv.txt  requirements.delft.txt  requirements.dev.txt  requirements.ocr.txt  requirements.pip.txt  requirements.prereq.txt  requirements.py2.txt  requirements.torch.txt  requirements.txt  server.sh  (+1 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  github-actions-ci.yml
delft/: resources-registry.json
doc/: API.md  CONFIG.md  Docker.md  deprecated-pipeline-examples.md  python_library.md  training.md
docker/: entrypoint.sh  get-commit-version.sh  set-version.sh
pygrobid/: __main__.py  cli.py
pygrobid/config/: config.py
pygrobid/document/: layout_document.py  semantic_document.py  tei_document.py
pygrobid/models/: data.py  delft_model.py  delft_model_impl.py  extract.py  model.py  model_impl_factory.py
pygrobid/processors/: fulltext.py  ref_matching.py
pygrobid/service/: server.py
pygrobid/utils/: text.py  tokenizer.py
sciencebeam/: __init__.py  conftest.py
sciencebeam/beam_utils/: core.py  fileio.py
sciencebeam/config/: app_config.py  app_config_test.py
sciencebeam/examples/: conversion_pipeline.py  conversion_pipeline_test.py  crf_conversion_pipeline.py  crf_conversion_pipeline_test.py  cv_conversion_pipeline.py  cv_conversion_pipeline_test.py  cv_conversion_utils.py  cv_conversion_utils_test.py  grobid_service_pdf_to_xml.py  grobid_service_pdf_to_xml_test.py
sciencebeam/pipeline_factories/: simple_pipeline.py  simple_pipeline_test.py
sciencebeam/pipeline_runners/: beam_pipeline_runner.py  beam_pipeline_runner_test.py  direct_pipeline_runner.py  local_pipeline_runner.py  (+3 more)
sciencebeam_parser/: __init__.py  __main__.py
scripts/: parallel-doc-to-pdf-load-test.sh  sequential-doc-to-pdf-load-test.sh
test-data/: minimal-office-open.docx
tests/: cli_test.py  compat_patch_mock.py  conftest.py  test_utils.py
xslt/: grobid-jats.xsl  scienceparse-jats.xsl
(+313 files in other folders)
